<!--
  ~ Copyright (c) 2020. Está classe está sendo consedida para uso pessoal
  -->

<resources>
    <string name="app_name">Books Catalog</string>
    <string name="txt_pesquisar_todos">All</string>
    <string name="txt_id">Id</string>
    <string name="txt_autor">Author</string>
    <string name="txt_ano">Year</string>
    <string name="btn_Salvar">Save</string>
    <string name="title_activity_tela_pesquisar">Search Result</string>
    <string name="title_activity_tela_cadastrar">Register Book</string>
    <string name="txt_cadastrar">Register</string>
    <string name="txt_pesquisar">Books found: </string>
    <string name="txt_pesquisarpor">Search By:</string>
    <string name="txt_titulo">Title</string>
    <string name="hint_titulo">Insert a book title…</string>
    <string name="hint_ano">Insert a book year…</string>
    <string name="hint_autor">Insert a author name…</string>
    <string name="success_msg">Operation performed with SUCCESS !!</string>
    <string name="error_msg">Oops !!, An error occurred during operation</string>
    <string name="FieldEmpty">This Field is Empty.</string>
    <string name="FieldNotFound">No Field Found or Registered</string>
    <string name="Notification_Title">Book Registred</string>
    <string name="Notification_Text_1">The Book</string>
    <string name="Notification_Text_2">has been registred.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_app_version">App Version</string>
    <string name="menu_darkMode">Dark Mode</string>
    <string name="action_choose_Language">Choose Language:</string>
    <string name="english">English</string>
    <string name="italy">Italy</string>
    <string name="portuguese">Portuguese</string>
    <string name="menu_data">User Data</string>
    <string name="btn_clear_data">Clear Data</string>
    <string name="alert_dialog_message">By clicking on the \"YES\" button, the Application data will be permanently deleted. Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Notification_Channel" translatable="false">Register Book Channel</string>
    <string name="Notification_Description" translatable="false">Channel for send notification when registred book</string>
    <string name="Google_Search" translatable="false">https://www.google.com/search?tbm=bks&amp;q=</string>
    <string name="WindowPopUpTitle">Choose one of the options:</string>
    <string name="WindowPopUpShare">Share</string>
    <string name="email_subject">"Book Catalog Assistance, message code: "</string>
    <string name="email_title">Write your Message</string>
    <string name="email_btn_send">SEND</string>
    <string name="email_btn_cancel">@android:string/cancel</string>
    <string name="email_chooseapp">Choose an app to send the email:</string>
    <string name="email_notextinsert">No text inserted.</string>
    <string name="email_timegenerated">"Message generated at: "</string>
    <string name="menu_feedback">Critics &amp; Suggestions</string>
    <string name="email_textHint">Write a message here telling what you would like to see or something that doesn\'t work in this app.</string>
    <string name="logo_AccessDescription">App\'s Logo</string>
    <string name="SearchButton_AccessDescription">Search books based on the options selected before.</string>
    <string name="txt_AccessDescriptionYear">Field to be filled only with numbers, where they represent the year. Example: 2020.</string>
    <string name="txt_AccessDescriptionTitle">Field to fill in the title of the book. The maximum available characters are 100.</string>
    <string name="txt_AccessDescriptionAuthor">Field to fill in the name of the author of the book. The maximum available characters are 100.</string>
    <string name="txt_AccessDescriptionAll">In this field there is no need to fill. The \"Search\" button will search for each registered book.</string>
    <string name="default_Id_Text_BookComponent" translatable="false">0</string>
    <string name="txt_AccessDescriptionTitleImage">Title image of the book.</string>
    <string name="txt_AccessDescriptionAuthorImage">Image of the author of the book.</string>
    <string name="txt_AccessDescriptionYearImage">Image of the year of the book.</string>
    <string name="txt_AccessDescriptionDeleteBotton">Button to delete this book information box.</string>
    <string name="txt_AccessDescriptionEditBotton">Button to change the title, author and year of the book.</string>
    <string name="delete_item_Title">"Delete "</string>
    <string name="delete_item_msg">By deleting this book you can no longer undo this decision. Are you sure you want to do this?</string>
    <string name="filter_btn">Button Filter</string>
    <string name="order_txt">Order</string>
    <string name="darkTheme">Dark</string>
    <string name="systemTheme">System</string>
    <string name="lightTheme">Light</string>
    <string name="batteryTheme">Battery Saver</string>
    <string name="hint_error">This field is empty…</string>
    <string name="developer_email" translatable="false">edoardofabriziodeiovanna@hotmail.com</string>
    <string name="description_floatingActionButton">Return to initial position</string>
    <string name="description_empty_bookcase">Empty Bookcase!!</string>
    <string name="btn_newBook">Add new Book</string>
    <string name="AllBookDeleted">All books have been deleted!!</string>
    <string name="edit_item_Title">Edit this book</string>
    <string name="btn_Accept">Accept</string>
    <string name="canceled_operation">Operation canceled</string>
    <string name="fill_field_bellow">Fill the field below …</string>
    <string name="btn_Pesquisar">Search</string>
    <string name="empty_field_error">This field must not be empty</string>
    <string name="recycler_view_books_content_description">List of Books</string>
</resources>
