<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. Está classe está sendo consedida para uso pessoal
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:background="?attr/backgroundcolor"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:scrollY="0dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="horizontal|vertical"
    android:soundEffectsEnabled="true"
    tools:context=".activities.TelaPrincipal"
    tools:menu="@menu/menubar">

    <ScrollView
        android:id="@+id/scrollView_telaPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20sp"
                android:orientation="horizontal"
                android:scrollbars="horizontal|vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:contentDescription="@string/logo_AccessDescription"
                    android:src="@drawable/booklogo_img" />

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/logo_text" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="20sp"
                android:background="@drawable/layout_border"
                android:drawableEnd="@android:drawable/ic_menu_add"
                android:elegantTextHeight="false"
                android:text="@string/txt_cadastrar"
                android:textColor="?attr/textcolor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txt_pesquisarpor"
                android:textColor="?attr/textcolor"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <RadioGroup
                    android:id="@+id/rdgPesquisarPor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbPesquisarPorTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:checked="true"
                        android:text="@string/txt_titulo"
                        android:buttonTint="?attr/colorAccent"
                        android:textColor="?attr/textcolor"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbPesquisarPorAutor"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/txt_autor"
                        android:buttonTint="?attr/colorAccent"
                        android:textColor="?attr/textcolor"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbPesquisarPorAno"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/txt_ano"
                        android:buttonTint="?attr/colorAccent"
                        android:textColor="?attr/textcolor"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbPesquisarPorTodos"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/txt_pesquisar_todos"
                        android:buttonTint="?attr/colorAccent"
                        android:textColor="?attr/textcolor"
                        android:textSize="20sp" />
                </RadioGroup>
            </HorizontalScrollView>

            <EditText
                android:id="@+id/edtPesquisar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:focusable="true"
                android:foregroundTint="?attr/backgroundcolor"
                android:hint="@string/hint_titulo"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="100"
                android:backgroundTint="?attr/textcolorhint"
                android:textColor="?attr/textcolor"
                android:textColorHighlight="?attr/textcolor"
                android:textColorHint="@color/colortexthint" />

            <Button
                android:id="@+id/btnPesquisar"
                android:layout_width="match_parent"
                android:background="@drawable/layout_border"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="10sp"
                android:contentDescription="@string/SearchButton_AccessDescription"
                android:drawableEnd="@android:drawable/ic_menu_search"
                android:text="@string/txt_pesquisar"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>