<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023. Está classe está sendo consedida para uso pessoal
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    android:scrollY="0dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="horizontal|vertical"
    android:soundEffectsEnabled="true"
    tools:context=".views.activities.MainActivity"
    tools:menu="@menu/menubar">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:scrollbars="horizontal|vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:contentDescription="@string/logo_AccessDescription"
                    android:src="@drawable/booklogo_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/app_name"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/logo_text" />

            </LinearLayout>

            <Button
                android:id="@+id/btnInsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@drawable/layout_border"
                android:drawableEnd="@android:drawable/ic_menu_add"
                android:elegantTextHeight="false"
                android:padding="8dp"
                android:text="@string/txt_cadastrar"
                android:textColor="?attr/textcolor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txt_pesquisarpor"
                android:textColor="?attr/textcolor"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <RadioGroup
                    android:id="@+id/rdg_search_by"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbPesquisarPorTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:buttonTint="?attr/colorAccent"
                        android:checked="true"
                        android:text="@string/txt_titulo"
                        android:textColor="?attr/textcolor"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbPesquisarPorAutor"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:buttonTint="?attr/colorAccent"
                        android:text="@string/txt_autor"
                        android:textColor="?attr/textcolor"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbPesquisarPorAno"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:buttonTint="?attr/colorAccent"
                        android:text="@string/txt_ano"
                        android:textColor="?attr/textcolor"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbPesquisarPorTodos"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:buttonTint="?attr/colorAccent"
                        android:text="@string/txt_pesquisar_todos"
                        android:textColor="?attr/textcolor"
                        android:textSize="20sp" />
                </RadioGroup>
            </HorizontalScrollView>

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="?attr/textColorHint"
                android:ellipsize="end"
                android:focusable="auto"
                android:foregroundTint="?attr/backgroundColor"
                android:hint="@string/hint_titulo"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="100"
                android:textColor="?attr/textcolor"
                android:textColorHighlight="?attr/textcolor"
                android:textColorHint="@color/colorTextHint" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/layout_border"
                android:contentDescription="@string/SearchButton_AccessDescription"
                android:drawableEnd="@android:drawable/ic_menu_search"
                android:padding="8dp"
                android:text="@string/btn_Pesquisar"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>