<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2023. Está classe está sendo consedida para uso pessoal
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:scrollbars="horizontal|vertical"
    tools:context=".views.activities.RegistryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:contentDescription="@string/logo_AccessDescription"
                    android:src="@drawable/booklogo_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/app_name"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/logo_text" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/txt_cadastrar"
                android:textColor="?attr/textcolor"
                android:textSize="28sp"
                app:drawableStartCompat="@drawable/clipboard" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:drawablePadding="5dp"
                android:text="@string/txt_titulo"
                android:textColor="?attr/textcolor"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/book_img"
                app:drawableTint="?attr/textcolor" />

            <EditText
                android:id="@+id/edtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_border"
                android:ellipsize="end"
                android:hint="@string/hint_titulo"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="100"
                android:padding="10dp"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textColorHint"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:drawablePadding="5dp"
                android:text="@string/txt_autor"
                android:textColor="?attr/textcolor"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/author_img"
                app:drawableTint="?attr/textcolor" />

            <EditText
                android:id="@+id/edtAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_border"
                android:ellipsize="end"
                android:hint="@string/hint_autor"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textPersonName"
                android:maxLength="100"
                android:padding="10dp"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textColorHint"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10sp"
                android:drawablePadding="5dp"
                android:text="@string/txt_ano"
                android:textColor="?attr/textcolor"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/calendar_img"
                app:drawableTint="?attr/textcolor" />

            <EditText
                android:id="@+id/edtAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/layout_border"
                android:hint="@string/hint_ano"
                android:imeOptions="actionSend"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:padding="10dp"
                android:singleLine="true"
                android:soundEffectsEnabled="true"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textColorHint"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonSave_height"
                android:layout_marginTop="30dp"
                android:background="@drawable/layout_border"
                android:drawableEnd="@android:drawable/ic_menu_save"
                android:text="@string/btn_Salvar"
                android:textColor="?attr/textcolor"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>